# iar_project

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
CNN_train/: CNN_clustering_train.ipynb
iar_project/: CNN.py  clustering.py  features_extraction.py  features_visu.py  main.py  save_evaluation_files.py  segmentation.py  solve_puzzle.py  test_clustering.py  utils.py
iar_project/solving_puzzle/: crossover.py  fitness.py  genetic_algorithm.py  image_analysis.py  image_helpers.py  individual.py  piece.py  plot.py  selection.py
notebooks/: 0_Segmentation.ipynb  1_Clustering.ipynb  2_features_Extraction.ipynb  ObjectRecognition.ipynb  project.ipynb
