[tool.poetry]
name = "iar_project"#name of your module
version = "0.0.1"#version of your module
description = "Template for repo"#description of your modeél
authors = ["Edouard Koehn"]
license = "MIT License"

# Main dependencies
[tool.poetry.dependencies]
python = ">=3.8,<3.12"
numpy = ">=1.23.5"

# Dev dependencies
jupyter = "^1.0.0"
pillow = "^9.5.0"
opencv-python = "^4.7.0.72"
matplotlib = "^3.7.1"
pandas = "^2.0.1"
scikit-learn = "^1.2.2"
scikit-image = "^0.20.0"
[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.12b0"
pre-commit = "^2.17.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
exclude = '''
/(
    \.eggs
  | \.git
  | \.venv
  | \.env
  | build
  | dist
  | \.mypy_cache
)\
'''
# Scripts of your module
[tool.poetry.scripts]
#spectral_clustering = "clustering:spectral_clustering.spectral_clustering"
